# DJ-Engine

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-attach.sh  post-create.sh  update-content.sh  warm-runtime.sh
.devcontainer/desktop/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
archive/: Architecture_Specification.json  DETAILED_TASK_DOCS.md  HANDOFF_BEVY18_MIGRATION.md  INDEX_Navigation_Guide.md  README.md  TUTORIAL_PROJECT.md
archive/ai/: AGENTS.md  GEMINI.md  enginebuildingprompt.txt
archive/ai/AI_HANDOFF_SUITE/: 01_CURRENT_STATE.md  02_WORKSPACE_MAP.md  03_ENGINE_GUIDE.md  07_AGENT_WORKFLOW.md  09_SESSION_HANDOFF_2026_03_10.md  11_SESSION_HANDOFF_2026_03_11.md  12_SESSION_HANDOFF_2026_03_13.md  PLAN.md  README.md
docs/: AI_Coding_Assistant_Config.md  ARCHITECTURE.md  CODE_STYLE.md  CURRENT_GAPS.md  CURRENT_PRIORITIES.md  DELIVERABLES_Summary.md  DETAILED_TASK_DOCS.md  GAME_DEVELOPER_GUIDE.md  GETTING_STARTED.md  Game_Engine_Technical_Roadmap.md  HANDOFF_BEVY18_MIGRATION.md  HANDOFF_BROAD_AUDIT.md  HANDOFF_CODESPACES_COMPILE_CLEANUP.md  IDE_Configuration_Guide.md  INDEX_Navigation_Guide.md  Implementation_Summary.md  LONG_TERM_GOALS.md  MASTER-DOCUMENTATION-INDEX.md  PROJECT_STRUCTURE.md  QA_CHECKLIST.md  README.md  ROADMAP.md  TESTING.md  TUTORIAL_PROJECT.md  complete-detailed-docs.md  docs-summary-reference.md
docs/AI_HANDOFF_SUITE/: 00_ACCURACY_AUDIT.md  01_CURRENT_STATE.md  02_WORKSPACE_MAP.md  03_ENGINE_GUIDE.md  04_GAME_GUIDE.md  05_DATA_SCRIPTING_AND_STORY.md  06_REMOTE_DEV_AND_CI.md  07_AGENT_WORKFLOW.md  08_SESSION_HANDOFF_2026_03_09.md  09_SESSION_HANDOFF_2026_03_10.md  10_BRANCH_LOG.md  11_SESSION_HANDOFF_2026_03_11.md  13_SESSION_HANDOFF_2026_03_13b.md  AUDIT_REQUEST.md  PROMPT.md  README.md
docs/examples/: combat_trigger.lua  inventory_rewards.lua  npc_dialogue.lua  quest_flow.lua  smoke_test.lua
docs/tutorials/: README.md
docs/tutorials/01-build-a-board-game/: 01-project-setup.md  02-board-and-grid.md  03-pieces-and-rules.md  04-rendering.md  05-input-and-setup.md  06-state-machine.md  07-ai-opponent.md  08-polish.md  README.md
engine/: Cargo.toml  README.md
engine/src/: ability.rs  character.rs  combat.rs  combat_fx.rs  contracts.rs  debug_console.rs  economy.rs  interaction.rs  inventory.rs  lib.rs  loot.rs  main.rs  particles.rs  project_mount.rs  quest.rs  save.rs  screen_fx.rs  status.rs  types.rs  zone.rs
engine/src/animation/: components.rs  mod.rs  systems.rs
engine/src/assets/: definitions.rs  loaders.rs  mod.rs
engine/src/audio/: mod.rs
engine/src/collision/: mod.rs  spatial.rs
engine/src/core/: mod.rs
engine/src/data/: components.rs  custom.rs  database.rs  grid.rs  loader.rs  mod.rs  project.rs  scene.rs  spawner.rs  story.rs
engine/src/diagnostics/: console.rs  mod.rs
engine/src/editor/: actions.rs  cli.rs  contracts_panel.rs  extensions.rs  graph_editor.rs  grid.rs  history.rs  mod.rs  panel_export.rs  panels.rs  plugin.rs  prefs.rs  preview.rs  property_widgets.rs  scene_io.rs  table.rs  tile_runtime.rs  tools.rs  tutorial.rs  types.rs  validation.rs  views.rs
engine/src/input/: mod.rs
engine/src/midi/: mod.rs  (+2 more)
engine/tests/: editor_integrity.rs  error_paths.rs  integration_tests.rs
games/dev/doomexe/: Cargo.toml  README.md
games/dev/doomexe/docs/: STATE_MACHINE.md  hamster_milestone.md
games/dev/doomexe/src/: gameover.rs  main.rs  pause.rs  screen_fade.rs  state.rs  story.rs  title.rs  types.rs  victory.rs
games/dev/doomexe/src/battle/: mod.rs  systems.rs  ui.rs
games/dev/doomexe/src/cellar/: mod.rs  systems.rs
games/dev/doomexe/src/corrupted_grove/: mod.rs  systems.rs
games/dev/doomexe/src/dialogue/: mod.rs  ui.rs
games/dev/doomexe/src/hamster/: assembly.rs  systems.rs  tests.rs
games/dev/doomexe/src/haunted_crypt/: mod.rs  systems.rs
games/dev/doomexe/src/hud/: minimap.rs  mod.rs  tracker.rs
games/dev/doomexe/src/overworld/: camera.rs  interaction.rs  mod.rs  player.rs
games/dev/doomexe/src/scripting/: mod.rs
games/dev/helix_rpg/: Cargo.toml  README.md
games/dev/helix_rpg/src/: main.rs  world.rs
games/dev/rpg_demo/: Cargo.toml  README.md
games/dev/rpg_demo/src/: gameplay.rs  main.rs
games/dev/stratego/: Cargo.toml  README.md
games/dev/stratego/src/: ai.rs  board.rs  input.rs  main.rs  pieces.rs  rendering.rs  rules.rs  state.rs  tutorial_steps.rs
plugins/helix_data/: Cargo.toml  README.md
plugins/helix_data/src/: api_health.rs  balance.rs  bridge.rs  dashboard.rs  exporter.rs  importer.rs  lib.rs  registries.rs  toml_loader.rs
plugins/helix_data/template/: project.json
plugins/helix_data/template/data/preview_profiles/: helix_import_preview.json
plugins/helix_data/template/exports/: console_20260315_131802.txt
plugins/helix_data/template/scenes/: helix_preview.json
plugins/helix_data/template/story_graphs/: helix_intro.json
plugins/helix_data/tests/: cli_smoke.rs  import_integration.rs
tools/asset_generator/: Cargo.toml
(+40 files in other folders)
