[workspace]
resolver = "2"
members = [
    "engine",
    "games/dev/doomexe",
    "games/dev/stratego",
    "games/dev/iso_sandbox",
    "plugins/helix_data",
    "tools/asset_generator"
]
default-members = ["engine"]

[workspace.package]
repository = "https://github.com/djmsqrvve/DJ-Engine"
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.18", features = ["wav"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
rand = "0.8"
bevy_egui = "0.39.1"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
tempfile = "3.14"

# Profile for development - faster builds at the cost of runtime performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies even in dev mode

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev-full]
inherits = "release"
debug = true
