[package]
name = "dj_engine_helix"
version = "0.1.0"
edition = "2021"
description = "Helix MMORPG data bridge for DJ Engine -- TOML import, typed registries, contract validation"
repository.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
thiserror = { workspace = true }
dj_engine = { path = "../../engine" }
helix-data = { path = "../../../../helix/helix_3d_render_prototype/crates/helix-data" }

[dev-dependencies]
tempfile = { workspace = true }

