[package]
name = "doomexe"
version = "0.1.0"
edition = "2021"
description = "Dark-fantasy JRPG prototype -- hamster narrator with corruption effects"
repository.workspace = true
license.workspace = true

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rand = { workspace = true }
thiserror = { workspace = true }
dj_engine = { path = "../../../engine" }

