[package]
name = "stratego"
version = "0.1.0"
edition = "2021"
description = "10x10 board game tutorial with AI opponent"
repository.workspace = true
license.workspace = true

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rand = { workspace = true }
dj_engine = { path = "../../../engine" }
